# software-projects

./: .env  Cargo.toml  README.md
data/: deckdb.db  fpdb.db
static/: deckstyle.css  homestyle.css  librarystyle.css  loginstyle.css  practicestyle.css
templates/: addtodeck.html.tera  createdeck.html.tera  homescreen.html.tera  library.html.tera  login.html.tera  practice.html.tera
