[package]
name = "final_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["secrets", "json"] }
lru_time_cache = "0.11.11"
rusqlite = { version = "0.29.0", features = ["bundled"] }
rand = "0.8.5"
lazy_static = "1.4.0"
reqwest = "0.11.18"
json = "0.12.4"
serde = "1.0.164"
urlencoding = "2.1.2"
serde_urlencoded = "0.7.1"
form_urlencoded = "1.2.0"

[dependencies.rocket_dyn_templates]
version = "=0.1.0-rc.3"
features = ["handlebars", "tera"]

